# Fable_CON

./: .env.example  .gitignore  DESIGN.md  LESSONS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sizing_test.csv  test_rejects.csv
api/: README.md  auth.py  deps.py  main.py  search_client.py  search_sync.py  semantic.py
common/: axis_taxonomy.py  axis_validation.py  db.py  deadline_rules.py  docket.py  docket_family.py  file_identity.py  json_logging.py  proceeding.py  vocab.py
docs/: 01-azure-deployment.md  02-configuration.md  03-ingestion-runbook.md  04-m365-walkthrough.md  05-metadata-extraction-spec.md  06-research-console-buildout.md  07-tag-etl-runbook.md  08-harvey-tagging-guide.md  README.md
e2e_results/: system_results.txt
functions/: .gitignore  README.md  deploy.sh  function_app.py  local.settings.json.example  processing.py  requirements.txt
infra/: README.md  main.bicep  main.bicepparam
ingest/: index_diff.py  load_axis_tags.py  load_document_text.py  load_tags.py  tag_crosswalk.py  tag_enumerate.py  tag_load.py  tag_ocr.py  tag_orchestrate.py  tag_process.py  weekly_report_parser.py
m365/: README.md
schema/: README.md  migrate.py
tests/: fakes.py  test_api.py  test_api_research.py  test_auth.py  test_axis_validation.py  test_deadline_rules.py  test_docket.py  test_docket_family.py  test_file_identity.py  test_functions_logic.py  test_index_diff.py  test_json_logging.py  test_load_axis_tags.py  test_load_document_text.py  test_load_tags.py  test_migrate.py  test_proceeding.py  test_tag_crosswalk.py  test_tag_load.py  (+6 more)
(+133 files in other folders)
