[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-con-database"
version = "0.1.0"
description = "Georgia DCH Certificate of Need (CON) research database: schema, ingestion, change detection, weekly report parsing, and search API"
requires-python = ">=3.11"
dependencies = [
    "pyodbc>=5.0",
    "pdfplumber>=0.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "azure-identity>=1.16",
    "azure-storage-blob>=12.19",
    "azure-search-documents>=11.4",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "reportlab>=4.1",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["common", "ingest", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
